[gd_scene load_steps=13 format=3 uid="uid://btltvb8860a06"]

[ext_resource type="Script" path="res://scripts/kreep1.gd" id="1_ly2b3"]
[ext_resource type="PackedScene" uid="uid://brnbw331wd8rw" path="res://scenes/hurtzone.tscn" id="2_a01jx"]
[ext_resource type="PackedScene" uid="uid://bfre8gl33k8pr" path="res://scenes/bullet1.tscn" id="2_b4yky"]
[ext_resource type="Texture2D" uid="uid://4l2yddxh6ckw" path="res://assets/sprites/slime_green.png" id="3_7ygwq"]
[ext_resource type="AudioStream" uid="uid://bgthq7dqsj1kj" path="res://assets/sounds/laser1.wav" id="5_jkt3j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xrdgp"]
size = Vector2(10, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjcpr"]
atlas = ExtResource("3_7ygwq")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_knfbv"]
atlas = ExtResource("3_7ygwq")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e14uq"]
atlas = ExtResource("3_7ygwq")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_grsro"]
atlas = ExtResource("3_7ygwq")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_143u1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjcpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knfbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e14uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grsro")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikcpy"]
size = Vector2(14, 15)

[node name="Kreep" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_ly2b3")
bullet_scene = ExtResource("2_b4yky")

[node name="Hurtzone" parent="." groups=["enemy"] instance=ExtResource("2_a01jx")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtzone"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_xrdgp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_143u1")
autoplay = "default"
frame = 2
frame_progress = 0.458921

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(-8, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(0, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_ikcpy")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jkt3j")
bus = &"SFX"

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
